syntax = "proto3";

package pusher;

//推送消息结构
message PusherMessage
{
	uint32 type=1;
	uint32 appId=2;
	uint64 from=3;
	uint64 to=4;
	uint64 connid=5;
	uint32 connServerid=6;
	uint64 gid=7;
	string text=8;
	uint64 time=9;
	uint64 msgid=10;
	uint32 platform=11;
	//Payload * payload;
	//Options* options;
}

//推送结构响应
message PusherReply
{
	bool result=1;
	string error=2;
	repeated string data=3;
}

service IPusher{
	rpc Push(PusherMessage) returns(PusherReply){}
}

